--- a/App2/App2/GameBoard.xaml
+++ b/App2/App2/GameBoard.xaml
@@ -8,19 +8,33 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button x:Name="confirmButton" Content="confirm" HorizontalAlignment="Left" Margin="91,208,0,0" VerticalAlignment="Top" Click="confirmButton_Click"/>
-        <Button x:Name="clearButton1" Content="clear" HorizontalAlignment="Left" Margin="201,208,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox0" HorizontalAlignment="Left" Margin="49,41,0,0" TextWrapping="Wrap" Text="_" VerticalAlignment="Top" TextChanged="textBox0_TextChanged"/>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="125,41,0,0" TextWrapping="Wrap" Text="_" VerticalAlignment="Top" IsReadOnly="True"/>
-        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Margin="201,41,0,0" TextWrapping="Wrap" Text="_" VerticalAlignment="Top" IsReadOnly="True"/>
-        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Margin="49,73,0,0" TextWrapping="Wrap" Text="_" VerticalAlignment="Top" IsReadOnly="True"/>
-        <TextBox x:Name="textBox4" HorizontalAlignment="Left" Margin="125,73,0,0" TextWrapping="Wrap" Text="_" VerticalAlignment="Top" IsReadOnly="True"/>
-        <TextBox x:Name="textBox5" HorizontalAlignment="Left" Margin="201,73,0,0" TextWrapping="Wrap" Text="_" VerticalAlignment="Top" IsReadOnly="True"/>
-        <TextBox x:Name="textBox6" HorizontalAlignment="Left" Margin="49,105,0,0" TextWrapping="Wrap" Text="_" VerticalAlignment="Top" IsReadOnly="True"/>
-        <TextBox x:Name="textBox7" HorizontalAlignment="Left" Margin="125,105,0,0" TextWrapping="Wrap" Text="_" VerticalAlignment="Top" IsReadOnly="True"/>
-        <TextBox x:Name="textBox8" HorizontalAlignment="Left" Margin="201,105,0,0" TextWrapping="Wrap" Text="_" VerticalAlignment="Top" IsReadOnly="True"/>
-        <Button x:Name="playButton" Content="Start Game" HorizontalAlignment="Left" Margin="125,272,0,0" VerticalAlignment="Top" Click="playButton_Click"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="252,272,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top"/>
 
+
+        <Button x:Name="button1" Content="Button" HorizontalAlignment="Left" Margin="49,49,0,0" VerticalAlignment="Top" Click="button1_Click"/>
+        <Button x:Name="button2" Content="Button" HorizontalAlignment="Left" Margin="119,49,0,0" VerticalAlignment="Top" Click="button2_Click"/>
+        <Button x:Name="button3" Content="Button" HorizontalAlignment="Left" Margin="189,49,0,0" VerticalAlignment="Top" Click="button3_Click"/>
+        <Button x:Name="button4" Content="Button" HorizontalAlignment="Left" Margin="49,89,0,0" VerticalAlignment="Top" Click="button4_Click"/>
+        <Button x:Name="button5" Content="Button" HorizontalAlignment="Left" Margin="119,89,0,0" VerticalAlignment="Top" Click="button5_Click"/>
+        <Button x:Name="button6" Content="Button" HorizontalAlignment="Left" Margin="189,89,0,0" VerticalAlignment="Top" Click="button6_Click"/>
+        <Button x:Name="button7" Content="Button" HorizontalAlignment="Left" Margin="49,129,0,0" VerticalAlignment="Top" Click="button7_Click"/>
+        <Button x:Name="button8" Content="Button" HorizontalAlignment="Left" Margin="119,129,0,0" VerticalAlignment="Top" Click="button8_Click"/>
+        <Button x:Name="button9" Content="Button" HorizontalAlignment="Left" Margin="189,129,0,0" VerticalAlignment="Top" Click="button9_Click"/>
+
+        <Button x:Name="confirmButton" Content="confirm" HorizontalAlignment="Left" Margin="91,208,0,0" VerticalAlignment="Top" Click="confirmButton_Click"/>
+        <Button x:Name="clearButton1" Content="clear" HorizontalAlignment="Left" Margin="201,208,0,0" VerticalAlignment="Top" Click="clearButton1_Click"/>
+        <Button x:Name="playButton" Content="Start Game" HorizontalAlignment="Left" Margin="125,272,0,0" VerticalAlignment="Top" Click="playButton_Click"/>
+        
+        <TextBox x:Name="messageBox" HorizontalAlignment="Left" Margin="147,326,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" IsReadOnly="True"/>
+        
+        <ComboBox x:Name="comboBoxColumn" HorizontalAlignment="Left" Margin="49,166,0,0" VerticalAlignment="Top" Width="95" SelectionChanged="comboBoxColumn_SelectionChanged" >
+            <ComboBoxItem Content="1"/>
+            <ComboBoxItem Content="2"/>
+            <ComboBoxItem Content="3"/>
+        </ComboBox>
+        <ComboBox x:Name="comboBoxRow" HorizontalAlignment="Left" Margin="159,166,0,0" VerticalAlignment="Top" Width="95">
+            <ComboBoxItem Content="1"/>
+            <ComboBoxItem Content="2"/>
+            <ComboBoxItem Content="3"/>
+        </ComboBox>
     </Grid>
 </Page>
